--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <button class="start">Start/Restart</button>
     <div class="score">Score:<span>0</span></div>
     <div class="grid">
-        <div class="snake"></div>
         <div></div>
         <div></div>
         <div></div>
         <div></div>
         <div></div>
-        <div class="apple"></div>
+        <div></div>
+        <div></div>
         <div></div>
         <div></div>
         <div></div>
